# mpich-ofi

./: CMakeLists.txt  main.cu  test.sh
